--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,21 @@ version: '3.8'
 
 services:
   db:
+    container_name: gueguelasMarket
     image: postgres:latest
-    restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
       POSTGRES_DB: mercadinho_db
     ports:
       - "5432:5432"
-
+    volumes:
+      - pgdata:/var/lib/postgresql/data
   api:
+    container_name: GueguelasMarket
+    image: gueguelas
     build: .
     depends_on:
       - db
     ports:
       - "8080:8080"
-    environment:
-      DB_HOST: postgres
-      DB_USER: postgres
-      DB_PASSWORD: 1234
-      DB_NAME: mercadinho_db
